# CGoGN-testing

./: CMakeLists.txt  main.cpp
example_out/: test.json  test.json.html
provided/: Backtrace.cpp  Backtrace.h  FastVector.h  IGXColors.h  IGXException.h  JSON.cpp  JSON.h  common_util.cpp  common_util.h  json2html.py
